--- a/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
@@ -3,15 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <title>Bevestiging Nieuwe Particuliere Rekening Geopend</title>
+    <style>
+         .hoofd-div{
+/*            padding: 50px;*/
+            padding-top: 100px;
+            padding-left: 110px;
+            margin-top: 100px;
+            margin-left: -8px;
+            margin-right: -8px;
+            background-color:#37AD49; 
+           
+/*            text-align: center;*/
+/*            border: 2px solid red;*/
+            font-family:sans-serif; 
+            margin-bottom: 100px;
+         
+        }
+        .sub-div{
+             padding-left: 110px;
+/*            background-color:aqua;*/
+/*
+            border-right: 10px solid #37AD49;
+            border-bottom: 10px solid #37AD49;
+*/
+/*            border: 3px solid #37AD49;*/
+            font-family: sans-serif;
+            padding-top: 50px;
+            padding-bottom: 100px;
+            margin-right: 1300px;
+        }
+        
+        .IbanSaldo{
+             padding-left: 110px;
+/*            background-color:aqua;*/
+/*
+            border-right: 10px solid #37AD49;
+            border-bottom: 10px solid #37AD49;
+*/
+            border: 3px solid #37AD49;
+            font-family: sans-serif;
+            padding-top: 50px;
+            padding-bottom: 100px;
+            margin-right: 1000px;
+            margin-left: 110px;
+        }
+        
+        .knop-div{
+             padding-left: 110px;
+            padding-top: 100px;
+/*            border: 2px solid blue;        */
+        }
+        
+        #rekeningoverzicht{
+            padding: 20px 40px;
+            color: #fff; 
+            border-radius: 25px;
+            background-color: #37AD49;
+            border: 2px solid #37AD49;
+            border-color: #37AD49;
+            cursor: pointer;
+        }
+    
+    
+    
+    
+    
+    </style>
 </head>
 <body>
-<h1> Gefeliciteerd! U heeft een nieuwe rekening geopend!</h1>
-    <h2>Detailinformatie nieuwe bankrekening</h2>
-
+    <div class="hoofd-div">
+    <h1> Gefeliciteerd! U heeft een nieuwe rekening geopend!</h1>
+    </div>
+    
+    <div class="sub-div">
+    <h3>Detailinformatie nieuwe bankrekening:</h3>
+    </div>
+    
+    <div class="IbanSaldo" >
     <h1>IBAN: <span th:text="${iban}" /></h1>
     <h1>Saldo: <span th:text="${balanceCent}" /></h1>
-<form action="/rekening-overzicht">
-    <input type="submit" value="rekeningoverzicht">
-</form>
+    </div>
+    
+    <div class="knop-div">
+    <form action="/rekening-overzicht">
+    <input type="submit" value="rekeningoverzicht" id="rekeningoverzicht">
+    </form>
+    </div>
 </body>
 </html>
