--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -4,50 +4,47 @@
     <meta charset="UTF-8">
     <title>nieuwe particuliere rekening openen</title>
     <style>
-/*        reset*/
-/*
-        *{ 
-            margin: 0;
-            padding: 0;
-        }
-*/
-/*
-        body{
-            padding-left: 110px;
-        }
-*/
+
         .hoofd-div{
-/*            padding: 50px;*/
-            padding-top: 100px;
-            padding-left: 110px;
-            margin-top: 100px;
-            margin-left: -8px;
-            margin-right: -8px;
+
+            padding-top: 5%;
+            padding-left: 20%;
+            margin-top: 3%;
+            margin-left: -8%;
+            margin-right: -8%;
             background-color:#37AD49; 
            
-/*            text-align: center;*/
-/*            border: 2px solid red;*/
-            font-family: sans-serif; 
-            margin-bottom: 100px;
+
+            
+            font-family:sans-serif; 
+            margin-bottom: 10%;
          
         }
         .sub-div{
-             padding-left: 110px;
-/*            background-color:aqua;*/
-/*
-            border-right: 10px solid #37AD49;
-            border-bottom: 10px solid #37AD49;
-*/
-/*            border: 3px solid #37AD49;*/
+
+            padding-left: 20%;
             font-family: sans-serif;
-            padding-top: 50px;
-            padding-bottom: 100px;
-            margin-right: 1300px;
+           margin-top: -5%;
+            margin-left: -8%;
+            margin-right: 55%;
+        }
+        
+        
+        .tekst-div{
+
+            padding-left: 20%;
+            font-family: sans-serif;
+           margin-top: 2%;
+            margin-left: -8%;
+            margin-right: 65%;
         }
         .knop-div{
-             padding-left: 110px;
-            padding-top: 100px;
-/*            border: 2px solid blue;*/
+
+           
+            margin-top:   10%;
+            padding-left: 20%;
+             margin-left: -8%;
+            margin-right: -8%;
             
        
                   
@@ -89,8 +86,14 @@
     
 <div class="sub-div">
 <h3>Druk op bevestigen om een nieuwe rekening te openen of druk op terug om naar de vorige pagina te gaan.
+</h3>
+</div>
+
+<div class="tekst-div">
+<h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
 </h4>
 </div>
+    
 <div class="knop-div">    
 <form action="/particuliere-rekening-openen" method="post" th:object="${privateAccount}">
 
