--- a/parque_banque_server/src/main/resources/static/css/main.css
+++ b/parque_banque_server/src/main/resources/static/css/main.css
@@ -2,18 +2,46 @@ html{
       font-family: 'Montserrat', sans-serif;
 }
 
-header {
+body {
+    padding: 0;
+    margin: 0;
+}
+
+.page-content {
+    width: 100%;
+    height: 100%;
+}
+
+a {
+    outline: none;
+    text-decoration: none;
+    color: white;
+}
+
+#logo img{
+    width: 80px; 
+    height:50px;
+    padding: 0;
+    margin: 0;
     
 }
 
 .logo-link {
     display: inline-block;
+    position:relative;
     
 }
 
+.navigation{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 .navigation ul{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
+    height: 50px;
     list-style-type: none;
      overflow: hidden;
     background-color: #37ad49;
@@ -35,48 +63,60 @@ li.nav-link a:hover {
 
 
 main {
-    display: flex;
+    display: block;
     min-height: 500px;
-    margin-top: 40px;
-    margin-bottom: 0;
+    margin-top: 125px;
+    margin-left:auto;
 
 }
 
 .main-content{
-
 text-align: center;
-    
+}
+
+.main-content img{
+    width: 100%;
+    max-width: 940px;
+    height: auto;
 }
 
 
 footer {
-    display: block;
-    padding: 5px;
-    margin: 0px;
+   display: inline-block;
+  position: fixed;
+  bottom: 10px;
+    width: 100%;
     background-color: #2e2a2a;
     color: #fff;
 }
 
 .content-container{
-    margin: auto;
-    max-width: 1400px;
+    margin: 0;
     font-size: 12px;
 }
 
 .footer-list {
     display: inline-block;
+    margin: 1em;
     list-style-type: none;
+}
+
+
+a.list-link:hover{
+    text-decoration: underline;
 }
 
 #footer-address{
   display: inline-block;
+    margin-left: 50px;
 
 }
 
 #footer-license{
     display: block;
+    margin-top: 10px;
+    margin-left: 10px;
     font-size:10px;
-
 }
 
 a {
@@ -86,11 +126,6 @@ a {
 }
 
 
-
-
-a.list-link{
-    
-}
 
 
 
