--- a/parque_banque_server/src/main/resources/templates/contact.html
+++ b/parque_banque_server/src/main/resources/templates/contact.html
@@ -5,52 +5,62 @@
     <meta name="author" content="Lisa Kemeling">
 
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Contactpagina</title>
+    <style>
+        #contact-content{
+            margin-left: 25px;
+        }
+        
+    </style>
 </head>
 <body>
 
 <!-- navigatie-->
-<header class="pbMenu">
-    <nav class="pbMenu-homeNav">
-        <!-- logo met link-->
-        <a href="/" class="pbMenu-logoLink"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80" height="45"></a>
-        <div align="right"><a href="/contact" class="pbNav-button">Contact>></a></div>
-
+    <nav class="navigation">
+        <ul>
+            <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+            <li class="nav-link"><a  href="/inloggen">Inloggen</a></li>
+            <li class="nav-link"><a  href="/klant-worden">Klant worden</a></li>
+            <li class="nav-link"><a  href="/contact">Contact</a></li>   
+        </ul>
     </nav>
-</header>
 
 <!-- body -->
-<h1>Parque Banque <img src="../static/green-heart.png" th:src="@{green-heart.png}" width="74px" height="74px"> van klanten</h1>
-<p>Daarom is zaken doen met ons 'like a walk in the park'</p>
+<main>
+    <div id="contact-content">
+        <h1>Parque Banque <img src="../static/green-heart.png" th:src="@{green-heart.png}" width="74px" height="74px"> van klanten</h1>
+        <p>Daarom is zaken doen met ons 'like a walk in the park'</p>
 
-<h2>Online</h2>
-<p>
-    Een nieuwe betaalrekening opent u bij ons gemakkelijk online<br>
-    Overboeken? 24/7 beschikbaar met enkele klikken heeft u het geregeld!<br>
-</p>
-<h2>Bezoekadres</h2>
-<p>
-    Bij ons kunt u nog ouderwets op de koffie komen en uw vragen stellen<br>
-    Er zit altijd een medewerkers voor uw klaar op één van onze Parque Banques
-</p>
-<address>
-    Parque Banque<br>
-    Parklaan 1056<br>
-    1919 CO Bankert <br>
-</address>
+        <h2>Online</h2>
+        <p>
+            Een nieuwe betaalrekening opent u bij ons gemakkelijk online<br>
+            Overboeken? 24/7 beschikbaar met enkele klikken heeft u het geregeld!<br>
+        </p>
+        <h2>Bezoekadres</h2>
+        <p>
+            Bij ons is iedereen altijd welkom!<br>
+            Er zit een medewerker voor u klaar op één van onze Parque Banques
+        </p>
+        <address>
+        Parque Banque<br>
+        Parklaan 1056<br>
+        1919 CO Bankert <br>
+        </address>
+    </div>
+</main>
 
 
 <!-- footer -->
-<footer>
-    <div class="content">
-        <ul class="footer-list">
-            <li><a href="/inloggen">Inloggen</a></li>
-            <li><a href="/klant-worden">Klant worden</a></li>
-            <li><a href="/rekening-openen">Rekening openen</a></li>
-            <li><a href="/personeel">inloggen personeel</a></li>
+<footer class="footer">
+    <div class="content-container">
+        <ul class= "footer-list">
+            <li><a class= list-link href="/inloggen">Inloggen</a></li>
+            <li><a class= list-link href="/klant-worden">Klant worden</a></li>
+            <li><a class= list-link href="/rekening-openen">Rekening openen</a></li>
+            <li><a class= list-link href="/personeel">inloggen personeel</a></li>
         </ul>
-    </div>
-    <div class="footer-contact">
+    <div id="footer-address">
         <address>
             Parque Banque<br>
             Parklaan 1056<br>
@@ -58,8 +68,8 @@
         </address>
     </div>
 
-    <div class="footer-license">© 2020 Parque Banque door team 2 | kvk 20016354 </div>
-
+    <div id="footer-license">© 2020 Parque Banque door team 2 | kvk 20016354 </div>
+    </div>
 </footer>
 
 
