--- a/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
@@ -5,53 +5,42 @@
     <title>Bevestiging Nieuwe Particuliere Rekening Geopend</title>
     <style>
          .hoofd-div{
-/*            padding: 50px;*/
-            padding-top: 100px;
-            padding-left: 110px;
-            margin-top: 100px;
-            margin-left: -8px;
-            margin-right: -8px;
+
+           padding-top: 5%;
+            padding-left: 20%;
+            margin-top: 3%;
+            margin-left: -8%;
+            margin-right: -8%;
             background-color:#37AD49; 
-           
-/*            text-align: center;*/
-/*            border: 2px solid red;*/
             font-family:sans-serif; 
-            margin-bottom: 100px;
+            margin-bottom: 10%;
+         
          
         }
         .sub-div{
-             padding-left: 110px;
-/*            background-color:aqua;*/
-/*
-            border-right: 10px solid #37AD49;
-            border-bottom: 10px solid #37AD49;
-*/
-/*            border: 3px solid #37AD49;*/
+           padding-left: 20%;
             font-family: sans-serif;
-            padding-top: 50px;
-            padding-bottom: 100px;
-            margin-right: 1300px;
+           margin-top: -5%;
+            margin-left: -8%;
+            margin-right: 55%;
         }
         
         .IbanSaldo{
-             padding-left: 110px;
-/*            background-color:aqua;*/
-/*
-            border-right: 10px solid #37AD49;
-            border-bottom: 10px solid #37AD49;
-*/
-            border: 3px solid #37AD49;
+              padding-left: 20%;
             font-family: sans-serif;
-            padding-top: 50px;
-            padding-bottom: 100px;
-            margin-right: 1000px;
-            margin-left: 110px;
+           margin-top: 6%;
+            margin-left: -8%;
+            margin-right: 65%;
+          
         }
         
+        
         .knop-div{
-             padding-left: 110px;
-            padding-top: 100px;
-/*            border: 2px solid blue;        */
+              margin-top:   10%;
+            padding-left: 20%;
+             margin-left: -8%;
+            margin-right: -8%;
+
         }
         
         #rekeningoverzicht{
@@ -80,9 +69,10 @@
     </div>
     
     <div class="IbanSaldo" >
-    <h1>IBAN: <span th:text="${iban}" /></h1>
-    <h1>Saldo: <span th:text="${balanceCent}" /></h1>
-    </div>
+    <h2>IBAN: <span th:text="${iban}" /></h2>
+    <h2>Saldo: <span th:text="${balanceCent}" /></h2>
+     </div>
+    
     
     <div class="knop-div">
     <form action="/rekening-overzicht">
