--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -5,21 +5,21 @@
     <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
     <style type="text/css">
         img{
+            text-align: left;
             display: inline-block;
             height: 50px;
         }
+        body {
+            text-align: center;
+        }
         label {
-            font-family: Segoe;
             display: inline-block;
             width: 100px;
             margin: 5px;
             text-align: left;
         }
-        h1 {
-            font-family: "Segoe";
-        }
-        p{
-            font-family: Segoe;
+        input {
+            width: 20%;
         }
         button {
             padding: 5px;
@@ -72,6 +72,7 @@
         <br><br>
     <button type="submit" name="action" value="send">Bedrijf aanmelden</button>
 </form>
+</div>
 
 </body>
 </html>
