commit voor troubleshooting

--- a/parque_banque_server/src/main/resources/templates/confirmsignup.html
+++ b/parque_banque_server/src/main/resources/templates/confirmsignup.html
@@ -135,7 +135,7 @@
         </div>
         <div>
             <button type="submit" name="action" value="cancel" formnovalidate>Annuleren</button>
-            <button type="submit" name="action" value="edit" style="right: 150px; postion: relative">Wijzig gegevens</button>
+            <button type="submit" name="action" value="edit">Wijzig gegevens</button>
             <button type="submit" name="action" value="createaccount" style="float: right">Volgende</button>
         </div>
     </form>
