--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -36,20 +36,22 @@
     <h1>Welkom!</h1>
     <p>Wat fijn dat u klant bij ons wilt worden!</p>
     <p>Om een rekening te openen bij Parque Banque hebben wij enkele gegevens nodig.</p>
-    <form action="#" th:action="@{/klant-worden}" th:object="${signUpFormBean}" method="post">
+    <form action="#" th:action="@{/klant-worden}" th:object="${signupform}" method="post">
         <div>
 
             <p>PERSOONSGEGEVENS</p>
             <div style="width: 480px; ">
                 <label for="firstName">Voornaam</label> <br>
-                <input id="firstName" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,255}$" th:field="*{firstName}"
+                <input id="firstName" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,255}$"
+                       th:name="firstName"
+                       th:value="${signupform.firstName}"
                        title="Vul uw voornaam in"
                        oninvalid="setCustomValidity('Voornaam is verplicht')"
                        oninput="setCustomValidity('')"/>
             </div>
             <div style="width: 140px; ">
                 <label for="infix">Tussenvoegsel</label> <br>
-                <input id="infix" type="text" pattern="$|^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,255}$" th:field="*{infix}"
+                <input id="infix" type="text" pattern="$|^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{1,255}" th:field="*{infix}"
                        title="Vul uw tussenvoegsel in" />
             </div>
             <div>
@@ -72,7 +74,7 @@
             <p>ADRESGEGEVENS</p>
             <div style="width: 520px">
                 <label for="street">Straat</label> <br>
-                <input id="street" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,255}$" th:field="*{street}"
+                <input id="street" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ0-9]{2,255}$" th:field="*{street}"
                        title="Vul uw straatnaam in"
                        oninvalid="setCustomValidity('Straatnaam is verplicht')"
                        oninput="setCustomValidity('')" />
@@ -86,14 +88,15 @@
             </div>
             <div style="width: 100px">
                 <label for="addition">Toevoeging</label> <br>
-                <input id="addition" type="text" pattern="[0-9a-zA-Z -]{1,255}" th:field="*{addition}"
+                <input id="addition" type="text" pattern="$|[0-9a-zA-Z -]{1,255}" th:field="*{addition}"
                        title="Vul uw toevoeging in"
                        oninvalid="setCustomValidity('Toevoeging kan enkel letters, cijfers, en een streepje ('-') bevatten')"
                        oninput="setCustomValidity('')" />
             </div>
             <div style="width: 80px;">
-                <label for="postcode">Postcode</label>
-                <input id="postcode" type="text" required pattern="[1-9][0-9]{3}[A-Za-z]{2}" th:field="*{zipcode}"
+                <label for="zipcode">Postcode</label>
+                <input id="zipcode" type="text" required pattern="[1-9][0-9]{3}[A-Za-z]{2}|[1-9][0-9]{3}[\s][A-Za-z]{2}"
+                       th:field="*{zipcode}"
                        title="Vul uw postcode in"
                        oninvalid="setCustomValidity('U moet een Nederlandse postcode invullen (bijvoorbeeld 1111AA of 1111 AA)')"
                        oninput="setCustomValidity('')"/>
@@ -117,7 +120,7 @@
             </div>
             <div>
                 <label for="email">Email</label>
-                <input id="email" type="email" required maxlength="255" th:field="*{emailAddress}"
+                <input id="email" type="email" required th:field="*{emailAddress}" maxlength="255"
                        title="Vul uw email-adres in"
                        oninvalid="setCustomValidity('Geef een geldig email-adres op')"
                        oninput="setCustomValidity('')" />
