--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -94,7 +94,7 @@
         <td> Geen rekeningen></td>
     </tr>
     <tr th:each="privateaccount : ${privateaccounts}">
-        <td th:text="${firstName + affix + surName}"></td>
+        <td th:text="${firstName + ' ' + affix + ' '+ surName}"></td>
         <td th:text="${privateaccount.iban}"></td>
         <!--        <td th:text="${firstName + affix + surName}"></td>-->
         <td th:text="${privateaccount.balanceCent}"></td>
@@ -122,7 +122,7 @@
         <td> Geen rekeningen></td>
     </tr>
     <tr th:each="businessaccount : ${businessaccounts}">
-        <td th:text="${firstName + affix + surName}"></td>
+        <td th:text="${firstName + ' ' + affix + ' '+ surName}"></td>
         <td th:text="${businessaccount.iban}"></td>
         <td th:text="${businessaccount.balanceCent}"></td>
 <!--        <td th:text="${bussinessaccount.getName}"></td>-->
@@ -130,3 +130,4 @@
     </tbody>
 </table>
 </body>
+</html>
