--- a/parque_banque_server/src/main/resources/templates/addaccountholder/addaccountholder.html
+++ b/parque_banque_server/src/main/resources/templates/addaccountholder/addaccountholder.html
@@ -8,14 +8,21 @@
     <h1>Rekeninghouder toevoegen</h1>
     <p>Vul hieronder de gebruikersnaam in van de klant die u wilt toevoegen aan uw rekening.</p>
     <p>De persoon die u wilt toevoegen moet dus al klant bij Parque Banque zijn.</p>
-    <form th:action="@{/rekeninghouder-toevoegen}" th:object="${addaccountholderform}" method="post">
+    <form action="#" th:action="@{/rekeninghouder-toevoegen}" th:object="${addAccountHolderFormBean}" method="post">
         <div>
             <label for="username">Gebruikersnaam</label>
-            <input id="username" type="text" required pattern="[A-Za-z0-9]{5,255}" th:field="*{username}" />
+            <input id="username" type="text" required pattern="[A-Za-z0-9]{5,255}" th:field="*{username}"
+                   title="Vul de gebruikersnaam in"
+                   oninvalid="setCustomValidity('Een gebruikersnaam bestaat uit minimaal 5 tekens (alleen letters en cijfers)')"
+                   oninput="setCustomValidity('')" />
         </div>
         <div>
             <label for="securityCode">Beveiligingscode</label>
-            <input id="securityCode" type="text" required pattern="[0-9]{5}" th:field="*{securityCode}" />
+            <span th:if="${insecureCode}" class="error" style="float: right">Dit is geen veilige code</span>
+            <input id="securityCode" type="text" required pattern="[0-9]{5}" th:field="*{securityCode}"
+                   title="Verzin een een beveiligingscode van 5 cijfers"
+                   oninvalid="setCustomValidity('Beveiligingscode moet bestaan uit 5 cijfers')"
+                   oninput="setCustomValidity('')" />
         </div>
         <div>
             <button type="submit" name="action" value="finish">OK</button>
