linkaccountcontroller verder ingevuld

--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount/linkpaymentaccountconfirmation.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount/linkpaymentaccountconfirmation.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bevestiging rekening toegevoegd</title>
 </head>
 <body>
-
+<h1>Gefeliciteerd! U bent mederekeninghouder geworden!</h1>
 </body>
 </html>
