--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount/linkpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount/linkpaymentaccount.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <title>Voeg rekening toe</title>
@@ -9,7 +11,7 @@
 <form action="#" th:action="@{/rekening-overzicht}" th:object="${rekening-overzicht}" method="post">
     <p>Rekeningnummer: <input type="text" th:field=*{iban}"/></p>
     <p>Beveiligingscode: <input type="text" th:field=*{securityCode}"/></p>
-    <p><input type="submit" value="Submit"/></p>
+    <p><input type="submit" value="OK"/></p>
 </form>
 </body>
 </html>
