Maakt de transaction html en confirmtransaction html
De formbean voor een transactie is aangemaakt, maar nog niet af

--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
     rekeningen opent en transacties verricht. Zowel voor uw onderneming als prive.">
     <meta property="og:title" content="Parque Banque">
 
+    <!-- LINK tot stylesheet and fonts -->
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Homepage</title>
